--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,4 +22,10 @@
     @apply mb-5;
     @pply text-base;
   }
+  .nuxt-content-highlight {
+    @apply relative;
+  }
+  .nuxt-content-highlight .filename {
+    @apply absolute right-0 text-gray-600 font-light z-10 mr-2 mt-1 text-sm;
+  }
 }
