--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 body {
   overflow-x: hidden;
 }
