--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -14,7 +14,7 @@ body {
 }
 
 .slide-enter,
-.slide-leave-to  {
+.slide-leave-to {
   opacity: 0;
   transform: translateX(30%);
 }
@@ -30,4 +30,8 @@ body {
   opacity: 0;
   transform: translateX(-50%);
   transition: all 300ms;
+}
+
+.exact-active-link {
+  @apply text-green-500;
 }
