--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,28 +2,37 @@ body {
   overflow-x: hidden;
 }
 
-.slide-enter-active,
-.slide-leave-active {
-  transition: opacity 0.3s, transform 0.5s;
-}
-
-.slide-enter,
-.slide-leave-to {
+.fade-enter-active {
+  animation: coming 0.5s;
+  animation-delay: 0.2s;
   opacity: 0;
-  transform: translateX(30%);
 }
 
-.slide-up-enter-active,
-.slide-up-leave-active {
-  transition: all 600ms;
+.fade-leave-active {
+  animation: going 0.5s;
 }
 
-.slide-up-enter,
-.slide-up-leave-to {
-  max-height: 0;
-  opacity: 0;
-  transform: translateX(-50%);
-  transition: all 300ms;
+@keyframes going {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(-10px);
+    opacity: 0;
+  }
+}
+
+@keyframes coming {
+  from {
+    transform: translateX(-10px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateX(0px);
+    opacity: 1;
+  }
 }
 
 .exact-active-link {
